<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimaryDark">
    <ScrollView android:id="@+id/ScrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="6dip"
            >
            <TextView
                android:id="@+id/help_page_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_page_intro"
                android:padding="2dip"
                android:layout_weight="1"
                android:textColor="@color/colorDivider"

                />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dip"
                android:gravity="center_vertical">
                <Button android:id="@+id/help_button1"
                    android:layout_weight="1"
                    android:layout_width="180dip"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:onClick="onClickHelp"
                    android:text="@string/help_title_section1"
                    android:textColor="@color/colorPrimaryLight"
                    android:drawableTop="@drawable/ic_home_white_24dp"/>
                <TextView
                    android:id="@+id/home_help_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="6"
                    android:text="@string/help_text_section1"
                    android:padding="8dip"
                    android:layout_weight="1"
                    android:textColor="@color/colorDivider"
                     />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dip"
                android:gravity="center_vertical">
                <Button android:id="@+id/help_button2"
                    android:layout_weight="1"
                    android:layout_width="180dip"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:onClick="onClickHelp"
                    android:text="@string/help_title_section2"
                    android:textColor="@color/colorPrimaryLight"
                    android:drawableTop="@drawable/ic_add_circle_white_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_text_section2"
                    android:padding="8dip"
                    android:layout_weight="1"
                    android:textColor="@color/colorDivider"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dip"
                android:gravity="center_vertical">
                <Button android:id="@+id/help_button3"
                    android:layout_weight="1"
                    android:layout_width="180dip"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:onClick="onClickHelp"
                    android:text="@string/help_title_section3"
                    android:textColor="@color/colorPrimaryLight"
                    android:drawableTop="@drawable/ic_delete_white_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_text_section3"
                    android:padding="8dip"
                    android:layout_weight="1"
                    android:textColor="@color/colorDivider"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dip"
                android:gravity="center_vertical">
                <Button android:id="@+id/help_button4"
                    android:layout_weight="1"
                    android:layout_width="180dip"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:onClick="onClickHelp"
                    android:text="@string/help_title_section4"
                    android:textColor="@color/colorPrimaryLight"
                    android:drawableTop="@drawable/ic_list_white_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="6"
                    android:text="@string/help_text_section4"
                    android:padding="8dip"
                    android:layout_weight="1"
                    android:textColor="@color/colorDivider"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="4dip"
                android:gravity="center_vertical">
                <Button android:id="@+id/help_button5"
                    android:layout_weight="1"
                    android:layout_width="180dip"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:onClick="onClickHelp"
                    android:text="@string/help_title_section5"
                    android:textColor="@color/colorPrimaryLight"
                    android:drawableTop="@drawable/ic_edit_white_24dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="8"
                    android:text="@string/help_text_section5"
                    android:padding="8dip"
                    android:layout_weight="1"
                    android:textColor="@color/colorDivider"
                    />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>